@@ -138,14 +138,16 @@ pcre.h.generic: pcre.h.in configure.ac
 	cp -p pcre.h $@
 
 # It is more complicated for config.h.generic. We need the version that results
-# from a default configuration. We can get this by doing a configure in a
-# temporary directory. However, some trickery is needed,
-# because the source directory may already be configured. If you
-# just try running configure in a new directory, it complains. For this reason,
-# we move config.status out of the way while doing the default configuration.
-# The resulting config.h is munged by perl to put #ifdefs round any #defines
-# and to get rid of any gcc-specific visibility settings. Make sure that
-# PCRE_EXP_DEFN is unset (in case it has visibility settings).
+# from a default configuration so as to get all the default values for PCRE
+# configuration macros such as MATCH_LIMIT and NEWLINE. We can get this by
+# doing a configure in a temporary directory. However, some trickery is needed,
+# because the source directory may already be configured. If you just try
+# running configure in a new directory, it complains. For this reason, we move
+# config.status out of the way while doing the default configuration. The
+# resulting config.h is munged by perl to put #ifdefs round any #defines for
+# macros with values, and to #undef all boolean macros such as HAVE_xxx and
+# SUPPORT_xxx. We also get rid of any gcc-specific visibility settings. Make
+# sure that PCRE_EXP_DEFN is unset (in case it has visibility settings).
 config.h.generic: configure.ac
 	rm -rf $@ _generic
 	mkdir _generic
@@ -158,8 +160,10 @@ config.h.generic: configure.ac
 	  -e 'if(/PCRE_EXP_DEFN/){print"/* #undef PCRE_EXP_DEFN */\n";$$blank=0;next;}' \
 	  -e 'if(/to make a symbol visible/){next;}' \
 	  -e 'if(/__attribute__ \(\(visibility/){next;}' \
-	  -e 'if(/^#define\s(?!PACKAGE)(\w+)/){print"#ifndef $$1\n$$_#endif\n";$$blank=0;}' \
-	  -e 'else {if(/^\s*$$/){print unless $$blank; $$blank=1;} else{print;$$blank=0;}}' \
+	  -e 'if(/LT_OBJDIR/){print"/* This is ignored unless you are using libtool. */\n";}' \
+	  -e 'if(/^#define\s((?:HAVE|SUPPORT|STDC)_\w+)/){print"/* #undef $$1 */\n";$$blank=0;next;}' \
+	  -e 'if(/^#define\s(?!PACKAGE|VERSION)(\w+)/){print"#ifndef $$1\n$$_#endif\n";$$blank=0;next;}' \
+	  -e 'if(/^\s*$$/){print unless $$blank; $$blank=1;} else{print;$$blank=0;}' \
 	  _generic/config.h >$@
 	rm -rf _generic
 
